--- a/README.Rmd
+++ b/README.Rmd
@@ -27,11 +27,11 @@ proof-of-concept.](https://www.repostatus.org/badges/latest/concept.svg)](https:
 [![CodeFactor](https://www.codefactor.io/repository/github/matt-dray/dialga/badge)](https://www.codefactor.io/repository/github/matt-dray/dialga)
 <!-- badges: end -->
 
-Under development. Just for fun. Bugs likely.
-
 ## Purpose
 
 {dialga} is an R package that helps you build and interpret standard [cron expressions](https://en.wikipedia.org/wiki/Cron#CRON_expression)---which are pretty esoteric---using friendly R syntax.
+
+Under development. Just for fun. Bugs likely.
 
 This package is a product of [Pokémon](https://www.pokemon.com/uk/)-Driven Development (PDD). Dialga is [the 'temporal Pokémon'](https://bulbapedia.bulbagarden.net/wiki/Dialga_(Pok%C3%A9mon)).
 
@@ -49,27 +49,25 @@ library(dialga)
 
 There's currently two functions: `r2cron()` takes integer vectors as inputs to time-period arguments and spits out a cron string, and `cron2eng()` takes a valid cron string and prints it as an English sentence. See `?dialga::r2cron()` and `?dialga::cron2eng()` for further details.
 
-### Simple example
+### Simple
 
 A simple example of `r2cron()`: how would you specify the 28th minute past 11PM every day?
 
 ```{r r2cron-simple}
 x <- dialga::r2cron(
   minutes = 28, 
-  hours = 23,
+  hours = 23,  # 24-hour clock
   clip = FALSE
 )
 
 x
 ```
 
-To confirm, we can pass that cron string into `cron2eng()`.
+To confirm, we can pass that cron string into `cron2eng()`. Note that output is rudimentary for now.
 
 ```{r cron2eng-simple}
 dialga::cron2eng(x)
 ```
-
-As you can see, this output is quite rudimentary for now.
 
 You could pipe these functions together to go from R to English.
 
@@ -80,7 +78,7 @@ dialga::r2cron(minutes = 28, hours = 23, clip = FALSE) %>%
   dialga::cron2eng()
 ```
 
-### Complex example
+### Complex
 
 A more complicated (i.e. contrived) request might be 'every 20 minutes from the zeroth minute of 3PM, 4PM and 5PM, on the 1st days of April, October and November, plus every weekend':
 
@@ -103,7 +101,7 @@ And to convert that to a sentence:
 dialga::cron2eng(y)
 ```
 
-### Bonus warnings
+### Warnings
 
 As a courtesy, you'll be warned when unlikely dates arise:
 
