Add test cover for cron2eng, improve readme intro, close #8

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,9 @@ proof-of-concept.](https://www.repostatus.org/badges/latest/concept.svg)](https:
 
 ## Purpose
 
-{dialga} is an R package that helps you build and interpret standard [cron expressions](https://en.wikipedia.org/wiki/Cron#CRON_expression)---which are pretty esoteric---using friendly R syntax.
+{dialga} is an R package that lets you build and interpret standard [cron expressions](https://en.wikipedia.org/wiki/Cron#CRON_expression) using familiar R syntax.
+
+Cron is software for scheduling computer tasks ('cron jobs'). Cron strings detail concisely the required schedule. They require a specific format, like `"0/15 * 1,3,20 6 0,6"`, but it can be difficult to remember how to structure them.
 
 Under development. Just for fun. Bugs likely.
 
